<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:text="@string/selectActionText"
        android:textAlignment="center"
        android:textAppearance="?android:textAppearanceMedium"
        android:textColor="@color/cardview_light_background" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp">

        <!-- A CardView that contains a TextView -->
        <android.support.v7.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"
            android:id="@+id/card_view_try_again"
            style="@style/smallCardViewButton"
            android:layout_alignParentLeft="true"
            android:onClick="tryAgain"
            card_view:cardBackgroundColor="@color/colorAccent"
            card_view:cardCornerRadius="15dp"
            card_view:cardElevation="10dp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:text="@string/tryAgainButtonText"
                    android:textColor="#fff"
                    android:textStyle="bold" />
            </RelativeLayout>

        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"
            android:id="@+id/card_view_show_result"
            style="@style/smallCardViewButton"
            android:layout_centerInParent="true"
            android:onClick="showResult"
            card_view:cardBackgroundColor="@color/colorAccent"
            card_view:cardCornerRadius="15dp"
            card_view:cardElevation="10dp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:text="@string/showResultButtonText"
                    android:textColor="#fff"
                    android:textStyle="bold" />
            </RelativeLayout>

        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"
            android:id="@+id/card_view_correction"
            style="@style/smallCardViewButton"
            android:layout_alignParentRight="true"
            android:onClick="showCorrectionForAllQuizQuestion"
            card_view:cardBackgroundColor="@color/colorAccent"
            card_view:cardCornerRadius="15dp"
            card_view:cardElevation="10dp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:text="@string/correctionButtonText"
                    android:textColor="#fff"
                    android:textStyle="bold" />
            </RelativeLayout>

        </android.support.v7.widget.CardView>

    </RelativeLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/correctionField"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="20dp"
                android:textAppearance="?android:textAppearanceMedium"
                android:textColor="@android:color/black" />
        </LinearLayout>
    </ScrollView>
</LinearLayout>